# subscript

./: .gitignore  README.md  config.yml  debug_output.txt  example.config.yml  example.env  list_models.py  models.example.yml  pyproject.toml  requirements.txt  subscript.py  todo.txt
modules/: interfaces.py  output.py  segmentation.py  transcription.py
output_alt/: sample.xml
output_renamed/: sample.txt  sample.xml
output_test/: sample.txt  sample.xml
src/subscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/subscript/modules/: output.py
